# poetry-template

./: .env.sample  .gitignore  README.md  pyproject.toml
src/: config.py  main.py
src/routers/api/: __init__.py  add.py
src/schemas/api/: add.py
tests/: test_main.py
