[tool.poetry]
name = "poetry-template"
version = "0.1.0"
description = ""
authors = ["torippy <47879788+torippy1024@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "poetry_template"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
